[gd_scene load_steps=17 format=1]

[ext_resource path="res://scene/popupearn.gd" type="Script" id=1]
[ext_resource path="res://asset/holder.png" type="Texture" id=2]
[ext_resource path="res://asset/crossmenu.png" type="Texture" id=3]
[ext_resource path="res://scene/AnimationPlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://asset/video.png" type="Texture" id=5]
[ext_resource path="res://asset/sharein.png" type="Texture" id=6]
[ext_resource path="res://scene/share_btn.gd" type="Script" id=7]
[ext_resource path="res://font/Lemon Jelly Personal Use.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://font/Crasns.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://asset/coin.png" type="Texture" id=10]

[sub_resource type="Animation" id=1]

resource/name = "animin"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect/rotation")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 90.0, 0.0 ]
}

[sub_resource type="Animation" id=2]

resource/name = "animout"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect/rotation")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0 ]
}

[sub_resource type="DynamicFont" id=3]

font/size = 40
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]

font/size = 32
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 9 )

[sub_resource type="DynamicFont" id=5]

font/size = 38
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 8 )

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 125, 75 )

[node name="popupearn" type="Control"]

rect/rotation = 90.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]

transform/pos = Vector2( 112.5, 215 )
transform/scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 2 )

[node name="backmenuearn" type="TouchScreenButton" parent="."]

transform/pos = Vector2( 161, 102 )
transform/scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 3 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="AnimationPlayer" parent="." instance=ExtResource( 4 )]

anims/animin = SubResource( 1 )
anims/animout = SubResource( 2 )

[node name="coinadd" type="TouchScreenButton" parent="."]

transform/pos = Vector2( 128, 194 )
transform/scale = Vector2( 0.3, 0.35 )
normal = ExtResource( 5 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="share" type="TouchScreenButton" parent="."]

transform/pos = Vector2( 128, 262 )
transform/scale = Vector2( 0.3, 0.35 )
normal = ExtResource( 6 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
script/script = ExtResource( 7 )

[node name="Label" type="Label" parent="."]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 60.0
margin/top = 145.0
margin/right = 174.0
margin/bottom = 185.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0625, 0.00708008, 0.00708008, 1 )
text = "Your Coin"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label1" type="Label" parent="."]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 124.0
margin/top = 148.0
margin/right = 188.0
margin/bottom = 181.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.0625, 0.00708008, 0.00708008, 1 )
text = "100"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Container" type="Container" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 12.0
margin/top = -3.0
margin/right = 52.0
margin/bottom = 37.0

[node name="Label2" type="Label" parent="Container"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 37.0
margin/top = 179.0
margin/right = 188.0
margin/bottom = 222.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.0625, 0.00708008, 0.00708008, 1 )
text = "   Watch Video 
   To Gain       
    Coin"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label4" type="Label" parent="Container"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 95.0
margin/top = 202.0
margin/right = 155.0
margin/bottom = 235.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.0625, 0.00708008, 0.00708008, 1 )
text = "50"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Container1" type="Container" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 12.0
margin/top = 54.0
margin/right = 52.0
margin/bottom = 94.0

[node name="Label2" type="Label" parent="Container1"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 30.0
margin/top = 188.0
margin/right = 209.0
margin/bottom = 311.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.0625, 0.00708008, 0.00708008, 1 )
text = "   Share To Your
     Friend . Gain 
               Coin"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label4" type="Label" parent="Container1"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 61.0
margin/top = 233.0
margin/right = 301.0
margin/bottom = 338.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.0625, 0.00708008, 0.00708008, 1 )
text = "25"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label" type="Label" parent="Container1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 89.0
margin/top = 215.0
margin/right = 198.0
margin/bottom = 263.0
custom_colors/font_color = Color( 0.0625, 0.00708008, 0.00708008, 1 )
text = ","
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 170, 157 )
transform/scale = Vector2( 0.28, 0.28 )
texture = ExtResource( 10 )

[node name="Sprite1" type="Sprite" parent="."]

transform/pos = Vector2( 162, 155 )
transform/scale = Vector2( 0.28, 0.28 )
texture = ExtResource( 10 )

[node name="blank" type="TouchScreenButton" parent="."]

visibility/visible = false
transform/pos = Vector2( -225, 110 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 6 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="networkerror" type="Label" parent="."]

visibility/visible = false
rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 42.0
margin/top = 345.0
margin/right = 222.0
margin/bottom = 359.0
text = "Turn on Internet Connection"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="backmenuearn" to="." method="_on_backmenuearn_pressed"]

[connection signal="released" from="backmenuearn" to="." method="_on_backmenuearn_released"]

[connection signal="pressed" from="coinadd" to="." method="_on_coinadd_pressed"]

[connection signal="released" from="coinadd" to="." method="_on_coinadd_released"]

[connection signal="coin_update" from="share" to="." method="update_coin"]

[connection signal="pressed" from="share" to="." method="_on_share_pressed"]

[connection signal="pressed" from="share" to="share" method="_on_share_pressed"]

[connection signal="released" from="share" to="." method="_on_share_released"]

[connection signal="pressed" from="blank" to="." method="_on_blank_pressed"]


